// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`list changes considering parents adds changes for dependency 1`] = `
Object {
  "changes": Object {
    "changes": undefined,
    "releases": Object {
      "all": Object {
        "dependencies": undefined,
        "manager": "javascript",
        "parents": Object {
          "yarn-workspace-base-pkg-a": Object {},
          "yarn-workspace-base-pkg-b": Object {},
        },
        "path": undefined,
        "pkg": "all",
        "type": "minor",
      },
      "yarn-workspace-base-pkg-a": Object {
        "changes": Array [
          Object {
            "meta": Object {
              "dependencies": Array [
                "all",
              ],
            },
            "releases": Object {},
            "summary": "",
          },
          Object {
            "meta": Object {
              "dependencies": Array [
                "all",
              ],
            },
            "releases": Object {},
            "summary": "",
          },
          Object {
            "meta": Object {
              "dependencies": Array [
                "yarn-workspace-base-pkg-b",
              ],
            },
            "releases": Object {},
            "summary": "",
          },
        ],
        "parents": Object {},
        "type": "patch",
      },
      "yarn-workspace-base-pkg-b": Object {
        "changes": Array [
          Object {
            "meta": Object {
              "dependencies": Array [
                "all",
              ],
            },
            "releases": Object {},
            "summary": "",
          },
          Object {
            "meta": Object {
              "dependencies": Array [
                "all",
              ],
            },
            "releases": Object {},
            "summary": "",
          },
        ],
        "parents": Object {
          "yarn-workspace-base-pkg-a": Object {},
        },
        "type": "patch",
      },
    },
  },
  "consoleDir": Array [],
  "consoleLog": Array [],
}
`;

exports[`list changes considering parents bumps patch due to dependency bump 1`] = `
Object {
  "changes": Object {
    "changes": undefined,
    "releases": Object {
      "all": Object {
        "dependencies": undefined,
        "manager": "javascript",
        "parents": Object {
          "yarn-workspace-base-pkg-a": Object {},
          "yarn-workspace-base-pkg-b": Object {},
        },
        "path": undefined,
        "pkg": "all",
        "type": "minor",
      },
      "yarn-workspace-base-pkg-a": Object {
        "dependencies": undefined,
        "manager": "javascript",
        "parents": Object {},
        "path": undefined,
        "pkg": "all",
        "type": "patch",
      },
      "yarn-workspace-base-pkg-b": Object {
        "changes": Array [
          Object {
            "meta": Object {
              "dependencies": Array [
                "all",
              ],
            },
            "releases": Object {},
            "summary": "",
          },
          Object {
            "meta": Object {
              "dependencies": Array [
                "all",
              ],
            },
            "releases": Object {},
            "summary": "",
          },
        ],
        "parents": Object {
          "yarn-workspace-base-pkg-a": Object {},
        },
        "type": "patch",
      },
    },
  },
  "consoleDir": Array [],
  "consoleLog": Array [],
}
`;

exports[`list changes considering parents rolls up the parent bumps 1`] = `
Object {
  "changes": Object {
    "changes": undefined,
    "releases": Object {
      "pkg-a": Object {
        "changes": Array [
          Object {
            "meta": Object {
              "dependencies": Array [
                "pkg-c",
              ],
            },
            "releases": Object {},
            "summary": "",
          },
          Object {
            "meta": Object {
              "dependencies": Array [
                "pkg-c",
              ],
            },
            "releases": Object {},
            "summary": "",
          },
          Object {
            "meta": Object {
              "dependencies": Array [
                "pkg-c",
              ],
            },
            "releases": Object {},
            "summary": "",
          },
          Object {
            "meta": Object {
              "dependencies": Array [
                "pkg-c",
              ],
            },
            "releases": Object {},
            "summary": "",
          },
        ],
        "parents": Object {
          "pkg-overall": Object {
            "pkg-a": Array [
              Object {
                "type": "dependencies",
                "version": "none",
              },
            ],
            "pkg-b": Array [
              Object {
                "type": "dependencies",
                "version": "none",
              },
            ],
          },
        },
        "type": "patch",
      },
      "pkg-b": Object {
        "changes": Array [
          Object {
            "meta": Object {},
            "releases": Object {
              "pkg-b": "minor",
            },
            "summary": "The pkg-b doesn't have a dep bump, but can dep bump pkg-a and pkg-overall with a patch.",
          },
        ],
        "parents": Object {
          "pkg-overall": Object {
            "pkg-a": Array [
              Object {
                "type": "dependencies",
                "version": "none",
              },
            ],
            "pkg-b": Array [
              Object {
                "type": "dependencies",
                "version": "none",
              },
            ],
          },
        },
        "type": "minor",
      },
      "pkg-c": Object {
        "changes": Array [
          Object {
            "meta": Object {},
            "releases": Object {
              "pkg-c": "patch",
              "pkg-d": "major",
            },
            "summary": "This should patch bump up the pkg-[number] line to where pkg-one also receives a bump. The pkg-c writes to a patch so we patch bump up that line too.",
          },
          Object {
            "meta": Object {
              "dependencies": Array [
                "pkg-d",
              ],
            },
            "releases": Object {},
            "summary": "",
          },
          Object {
            "meta": Object {
              "dependencies": Array [
                "pkg-d",
              ],
            },
            "releases": Object {},
            "summary": "",
          },
          Object {
            "meta": Object {
              "dependencies": Array [
                "pkg-d",
              ],
            },
            "releases": Object {},
            "summary": "",
          },
          Object {
            "meta": Object {
              "dependencies": Array [
                "pkg-d",
              ],
            },
            "releases": Object {},
            "summary": "",
          },
        ],
        "parents": Object {
          "pkg-a": Object {
            "pkg-c": Array [
              Object {
                "type": "dependencies",
                "version": "none",
              },
            ],
          },
        },
        "type": "patch",
      },
      "pkg-d": Object {
        "changes": Array [
          Object {
            "meta": Object {},
            "releases": Object {
              "pkg-c": "patch",
              "pkg-d": "major",
            },
            "summary": "This should patch bump up the pkg-[number] line to where pkg-one also receives a bump. The pkg-c writes to a patch so we patch bump up that line too.",
          },
        ],
        "parents": Object {
          "pkg-c": Object {
            "pkg-d": Array [
              Object {
                "type": "dependencies",
                "version": "none",
              },
            ],
          },
          "pkg-four": Object {
            "pkg-d": Array [
              Object {
                "type": "dependencies",
                "version": "none",
              },
            ],
          },
        },
        "type": "major",
      },
      "pkg-four": Object {
        "changes": Array [
          Object {
            "meta": Object {
              "dependencies": Array [
                "pkg-d",
              ],
            },
            "releases": Object {},
            "summary": "",
          },
          Object {
            "meta": Object {
              "dependencies": Array [
                "pkg-d",
              ],
            },
            "releases": Object {},
            "summary": "",
          },
          Object {
            "meta": Object {
              "dependencies": Array [
                "pkg-d",
              ],
            },
            "releases": Object {},
            "summary": "",
          },
          Object {
            "meta": Object {
              "dependencies": Array [
                "pkg-d",
              ],
            },
            "releases": Object {},
            "summary": "",
          },
        ],
        "parents": Object {
          "pkg-three": Object {
            "pkg-four": Array [
              Object {
                "type": "dependencies",
                "version": "none",
              },
            ],
          },
        },
        "type": "patch",
      },
      "pkg-one": Object {
        "changes": Array [
          Object {
            "meta": Object {
              "dependencies": Array [
                "pkg-two",
              ],
            },
            "releases": Object {},
            "summary": "",
          },
        ],
        "parents": Object {},
        "type": "patch",
      },
      "pkg-overall": Object {
        "changes": Array [
          Object {
            "meta": Object {
              "dependencies": Array [
                "pkg-b",
              ],
            },
            "releases": Object {},
            "summary": "",
          },
          Object {
            "meta": Object {
              "dependencies": Array [
                "pkg-b",
              ],
            },
            "releases": Object {},
            "summary": "",
          },
          Object {
            "meta": Object {
              "dependencies": Array [
                "pkg-a",
              ],
            },
            "releases": Object {},
            "summary": "",
          },
          Object {
            "meta": Object {
              "dependencies": Array [
                "pkg-b",
              ],
            },
            "releases": Object {},
            "summary": "",
          },
          Object {
            "meta": Object {
              "dependencies": Array [
                "pkg-a",
              ],
            },
            "releases": Object {},
            "summary": "",
          },
          Object {
            "meta": Object {
              "dependencies": Array [
                "pkg-b",
              ],
            },
            "releases": Object {},
            "summary": "",
          },
          Object {
            "meta": Object {
              "dependencies": Array [
                "pkg-a",
              ],
            },
            "releases": Object {},
            "summary": "",
          },
        ],
        "parents": Object {},
        "type": "patch",
      },
      "pkg-three": Object {
        "changes": Array [
          Object {
            "meta": Object {
              "dependencies": Array [
                "pkg-four",
              ],
            },
            "releases": Object {},
            "summary": "",
          },
          Object {
            "meta": Object {
              "dependencies": Array [
                "pkg-four",
              ],
            },
            "releases": Object {},
            "summary": "",
          },
          Object {
            "meta": Object {
              "dependencies": Array [
                "pkg-four",
              ],
            },
            "releases": Object {},
            "summary": "",
          },
        ],
        "parents": Object {
          "pkg-two": Object {
            "pkg-three": Array [
              Object {
                "type": "dependencies",
                "version": "none",
              },
            ],
          },
        },
        "type": "patch",
      },
      "pkg-two": Object {
        "changes": Array [
          Object {
            "meta": Object {
              "dependencies": Array [
                "pkg-three",
              ],
            },
            "releases": Object {},
            "summary": "",
          },
          Object {
            "meta": Object {
              "dependencies": Array [
                "pkg-three",
              ],
            },
            "releases": Object {},
            "summary": "",
          },
        ],
        "parents": Object {
          "pkg-one": Object {
            "pkg-two": Array [
              Object {
                "type": "dependencies",
                "version": "none",
              },
            ],
          },
        },
        "type": "patch",
      },
    },
  },
  "consoleDir": Array [],
  "consoleLog": Array [],
}
`;

exports[`list changes considering parents skips roll up if range dep 1`] = `
Object {
  "changes": Object {
    "changes": undefined,
    "releases": Object {
      "pkg-a": Object {
        "changes": Array [
          Object {
            "meta": Object {},
            "releases": Object {
              "pkg-a": "patch",
            },
            "summary": "Roll up just a bit please.",
          },
        ],
        "parents": Object {
          "pkg-b": Object {
            "pkg-a": Array [
              Object {
                "type": "dependencies",
                "version": "1.0.0",
              },
            ],
          },
          "pkg-c": Object {
            "pkg-a": Array [
              Object {
                "type": "dependencies",
                "version": "^1.0.0",
              },
            ],
          },
        },
        "type": "patch",
      },
      "pkg-b": Object {
        "changes": Array [
          Object {
            "meta": Object {
              "dependencies": Array [
                "pkg-a",
              ],
            },
            "releases": Object {},
            "summary": "",
          },
        ],
        "parents": Object {},
        "type": "patch",
      },
    },
  },
  "consoleDir": Array [
    Array [
      Object {
        "pkg-a": Object {
          "deps": Object {},
          "name": "pkg-a",
          "version": "none",
        },
        "pkg-b": Object {
          "deps": Object {
            "pkg-a": Array [
              Object {
                "type": "dependencies",
                "version": "1.0.0",
              },
            ],
          },
          "name": "pkg-b",
          "version": "none",
        },
        "pkg-c": Object {
          "deps": Object {
            "pkg-a": Array [
              Object {
                "type": "dependencies",
                "version": "^1.0.0",
              },
            ],
          },
          "name": "pkg-c",
          "version": "none",
        },
      },
      Object {
        "depth": 5,
      },
    ],
  ],
  "consoleLog": Array [],
}
`;
